--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
-author:
-  name             : "Rahul Date"
+title: [devops-novice]
+description: [Guide to DevOps tools]
