--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-#theme: jekyll-theme-cayman
+theme: jekyll-theme-cayman
 title: [devops-novice]
-description: [Guide to DevOps tools]
+description: [Notes: DevOps Tools]
