--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
-title: learning
-description: Notes: DevOps Tools
+title: "learning"
+description: [Notes: DevOps Tools]
