--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,14 @@
-theme: jekyll-theme-merlot
+# Site Build Settings
+
+# jekyll-paginate configuration
+paginate:            5
+
+# Build settings
+markdown:            kramdown
+highlighter:         rouge
+permalink:           /:title
+plugins:             [jekyll-paginate, jekyll-sitemap, jekyll-feed, jekyll-seo-tag]
+
+# Customise atom feed settings (this is where Jekyll-Feed gets configuration information)
 title: "devops-novice"
 description: "Rahul's Notes"
